--- a/co/TH4_Droit_9.html
+++ b/co/TH4_Droit_9.html
@@ -169,12 +169,20 @@
                             Des actions sont alors mises en place :
                           <ul>
                             <li>Protection des codes sources pour garder un savoir faire face à la concurrence.</li>
-                            <li>Lutter contre l’usurpation de l’identité de l’entreprise par piratage.</li>
+                            <li>Lutter contre <b>l’usurpation de l’identité</b> de l’entreprise par piratage.</li>
                             <li>Lutter contre l’usurpation d’identité des clients.</li>
-                            <li>Lutter contre le fait de porter atteinte à l’image de marque et à la notoriété
+                            <li>Lutter contre le fait de porter <b>atteinte à l’image de marque</b> et à la notoriété
                               l’entreprise, car on risque de lui imputer les actes malveillants.</li>
                           </ul>
-                          </p>
+                          <p>L’entreprise peut agir en cas d’atteinte à ses droits :</p>
+                          <ul>
+                            <li>Par une <b>action en contrefaçon</b> pour faire sanctionner l’atteinte à un droit de
+                              propriété
+                              intellectuelle.</li>
+                            <li>Par <b>action en concurrence déloyale et parasitaire</b> pour faire condamner une faute
+                              ou un
+                              comportement contraire aux usages honnêtes du commerce.</li>
+                            </p>
                         </div>
                       </div>
                     </div>
