--- a/co/TH4_Droit_10.html
+++ b/co/TH4_Droit_10.html
@@ -119,19 +119,18 @@
                           <p>
                             Un site Internet peut être protégé par :
                           <ul>
-                            <li>Le nom de domaine :
-
+                            <li>Le nom de domaine :<br>
+                              dépôt à l’Afnic (Association française pour le nommage Internet en coopération)
+                              pour bénéficier de la règle du « premier arrivé premier servi ». Permet de se prévaloir d’une concurrence déloyale contre un concurrent ou un cyber-squatter. En déposant le nom de domaine comme une marque auprès de l’INPI, l’action en contrefaçon peut alors être exercée ;
                             </li>
-                            <li>La présentation du site :</li>
-
+                            <li>La présentation du site :<br>
+                              les créations graphiques et plastiques d’un site internet peuvent faire l’objet d’un dépôt de dessins et modèles, auprès de l’INPI (Institut National de la Propriété Intellectuelle). Ce dépôt confère une protection valable 25 ans ;
+                            </li>
+                            <li>Le logiciel et le contenu :<br>
+                              Textes et éventuelles bases de données sont protégés par le droit d’auteur et/ou le droit du producteur.
+                            </li>
                           </ul>
                           </p>
-
-
-
-
-
-
                           <p>En cas de violation par un tiers du droit d'auteur, l'auteur peut agir en justice sur deux
                             fondements :
                           </p>
@@ -211,7 +210,7 @@
                           <p><strong class="txt_emp_is ">L'architecture de la base &ndash; c'est-&agrave;-dire
                               l'organisation, la structuration et le classement des donn&eacute;es &ndash; est
                               prot&eacute;g&eacute;e par le droit d'auteur &agrave; condition qu'elle soit
-                              originale</strong>. Le cr&eacute;ateur de la base de donn&eacute;es est titulaire des
+                              originale</strong>. <mark>Article L. 112-3</mark> du CPI, le droit reconnaît la protection des dispositions du droit d’auteur aux personnes qui, « par le choix ou la disposition des matières, constituent des créations intellectuelles ». Le cr&eacute;ateur de la base de donn&eacute;es est titulaire des
                             droits moraux et patrimoniaux, et il peut agir sur les terrains de la concurrence
                             d&eacute;loyale et de la contrefa&ccedil;on en cas de violation de son droit par un tiers.
                           </p>
@@ -241,6 +240,13 @@
                           <p>La question se pose de savoir &agrave; qui est reconnue la titularit&eacute; des droits, et
                             donc la protection, quand l'actif immat&eacute;riel a &eacute;t&eacute; cr&eacute;&eacute;
                             par un salari&eacute; de l'entreprise.
+                            <br>
+                            Un actif immatériel est propriété (droits patrimoniaux) de l’entreprise lorsque :
+                            <ul>
+                              <li>Il a été créé par un ou plusieurs salariés dans l’exercice de leurs fonctions.</li>
+                              <li>Il a été créé par un ou plusieurs salariés d’après les instructions de leur employeur.</li>
+
+                            </ul>
                           </p>
                           <p>En principe,<strong class="txt_emp_is "> le droit d'auteur est reconnu &agrave; celui qui a
                               cr&eacute;&eacute; l'&oelig;uvre</strong> (site Internet, base de donn&eacute;es). Ainsi,
